syntax = "proto3";

package hero2;

service Heroes2Service {
  rpc FindOne2 (HeroById) returns (Hero) {}
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}